Update LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="https://facebook.com/Mebatsion Sahle"><img src="images/fb.jpg" alt="facebook logo"></a>
                 <a href="https://t.me/@MebaGT"><img src="images/logo telegram.svg" alt="telegram logo"></a>
                 <a href="https://github.com/MebatsionSa"><img src="images/github.png" alt="github icon"></a>
-                <a href="https://linkedin.com/Mebatsion Sahle"><img src="images/logo linkedin.png" alt="gmail logo"></a>
+                <a href="https://www.linkedin.com/in/mebsahle"><img src="images/logo linkedin.png" alt="LinkedIn logo"></a>
             </div>
             <p class="copyright">Copyright by MeSa</p>
         </div>
