Update icon of website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mebatsion Sahle</title>
     <link rel="stylesheet" href="main.css">
-    <title>Personal Website</title>
+    <link rel="icon" href="/your_path_to_image/favicon.jpg">
 </head>
 <body>
     <div class="document">
