--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mebatsion Sahle</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="images/girl_.png">
+    <link rel="icon" href="https://github.com/mebsahle/mebsahle.github.io/blob/main/images/girl_.png">
 </head>
 <body>
     <div class="document">
