--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mebatsion Sahle</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="https://github.com/mebsahle/mebsahle.github.io/blob/main/images/girl_.png">
+    <link rel="shortcut icon" type="image/jpg" href="https://github.com/mebsahle/mebsahle.github.io/blob/main/images/girl_.png"/>
+
 </head>
 <body>
     <div class="document">
